# scenario-framework

./: .env.example  .gitignore  .gitlab-ci.yml  CI_SETUP.md  HOW_TO_ADD_VARIABLES.md  INSTALL.md  Makefile  QUICK_START_CI.md  README.md  SECURE_SETUP.md  SECURITY_PLAN.md  TESTING.md  TROUBLESHOOTING.md  list_models.py  pyproject.toml  run_scenario.py  setup.sh
agents/: __init__.py  recipe_agent.py
tests/: __init__.py  conftest.py  test_recipe_scenario.py
