[project]
name = "test-agent"
version = "0.1.0"
description = "Recipe agent testing with Scenario framework"
requires-python = ">=3.11"
dependencies = [
    "langwatch-scenario>=0.7.14",
    "openai>=2.8.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "scenario: marks tests as scenario tests",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
timeout = 300
